manifest/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: <deployment_name>
  labels:
    app: <deployment_name>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <deployment_name>
  template:
    metadata:
      labels:
        app: <deployment_name>
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
        - name: <deployment_name>
          image: <image>
          ports:
            - containerPort: 8080
              protocol: TCP
