manifest/route.yaml
#oc expose service --path /greeting spring-web-quickstart -n demo
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: <deployment_name>
  labels:
    app: <deployment_name>
spec:
  host: <deployment_name>-<namespace>.apps.cluster-f6kmn.f6kmn.sandbox2891.opentlc.com
  path: /greeting
  to:
    kind: Service
    name: <deployment_name>
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
